# circom

circom/src/: compilation_user.rs  input_user.rs  main.rs
code_producers/: Cargo.toml
code_producers/src/: lib.rs
code_producers/src/components/: mod.rs
code_producers/src/rust_elements/: mod.rs  rust_code_generator.rs
code_producers/src/rust_elements/common/: Cargo.toml  input.json
code_producers/src/rust_elements/common/src/: circom.rs  field.rs  main.rs  witness_generator.rs
code_producers/src/wasm_elements/: wasm_code_generator.rs
compiler/src/: compiler_interface.rs
compiler/src/circuit_design/: build.rs  circuit.rs  function.rs  template.rs
compiler/src/intermediate_representation/: assert_bucket.rs  branch_bucket.rs  call_bucket.rs  compute_bucket.rs  create_component_bucket.rs  ir_interface.rs  load_bucket.rs  log_bucket.rs  loop_bucket.rs  return_bucket.rs  store_bucket.rs  value_bucket.rs
compiler/src/translating_traits/: mod.rs
constraint_list/src/: json_porting.rs  r1cs_porting.rs
constraint_writers/src/: json_writer.rs  r1cs_writer.rs
dag/src/: json_porting.rs  r1cs_porting.rs
parser/src/: lib.rs
program_structure/src/abstract_syntax_tree/: ast.rs
