[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellperson = { git = "https://github.com/lurk-lab/bellperson.git", branch = "circom-dev" }
byteorder = "1.4.3"
ff = "0.13.0"
lz_fnv = "0.1.2"
pasta_curves = "0.5.1"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"

[workspace]
